<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.zhuravlev.vitaly.weatherapp.base.atom.Atom" />

        <variable
            name="viewModel"
            type="com.zhuravlev.vitaly.weatherapp.ui.main.MainScreenViewModel" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:refreshing="@{viewModel.currentWeatherLiveData.isLoading()}"
        tools:context=".ui.main.MainScreenFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/current_weather_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.dateLiveData}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="12 january 22:30" />

                <ImageView
                    android:id="@+id/current_weather_icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerInside"
                    app:error="@{@drawable/ic_cloud}"
                    app:icon="@{viewModel.weatherLiveData.weather.get(0).icon}"
                    app:layout_constraintBottom_toBottomOf="@id/current_weather_value"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toStartOf="@id/current_weather_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/current_weather_value"
                    tools:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/weather_icon_description" />

                <TextView
                    android:id="@+id/current_weather_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@{@string/current_weather_mask(viewModel.weatherLiveData.main.temperature)}"
                    android:textSize="@dimen/extra_large_text_size"
                    app:layout_constraintStart_toEndOf="@id/current_weather_icon"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_timestamp"
                    tools:text="0°" />

                <TextView
                    android:id="@+id/current_weather_min_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/temperature_min_max_mask(viewModel.weatherLiveData.main.temperatureMin, viewModel.weatherLiveData.main.temperatureMax)}"
                    app:layout_constraintBottom_toTopOf="@id/current_weather_feels_like"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/current_weather_value"
                    tools:text="-1°..0°" />

                <TextView
                    android:id="@+id/current_weather_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/temperature_feels_like_mask(viewModel.weatherLiveData.main.temperatureMin, viewModel.weatherLiveData.main.temperatureMax)}"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@id/current_weather_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_min_max"
                    tools:text="Feels like -4°" />

                <TextView
                    android:id="@+id/current_weather_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    app:capitalize="@{true}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_value"
                    app:text="@{viewModel.weatherLiveData.weather.get(0).description}"
                    tools:text="Cloudy" />

                <TextView
                    android:id="@+id/current_weather_wind_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/wind_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_status"
                    tools:text="@string/wind_label" />

                <TextView
                    android:id="@+id/current_weather_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{@string/wind_speed_mask(viewModel.weatherLiveData.wind.speed)}"
                    app:layout_constraintStart_toEndOf="@id/current_weather_wind_label"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_status"
                    tools:text="5 m/s" />

                <TextView
                    android:id="@+id/current_weather_wind_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{viewModel.getWindDegreeDescription(viewModel.weatherLiveData.wind.degrees, context)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/current_weather_wind_speed"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_status"
                    tools:text="СЗ" />

                <TextView
                    android:id="@+id/current_weather_pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/pressure_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_wind_label"
                    tools:text="@string/pressure_label" />

                <TextView
                    android:id="@+id/current_weather_pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{viewModel.getPressureDescription(viewModel.weatherLiveData.main.pressure, context)}"
                    app:layout_constraintStart_toEndOf="@id/current_weather_pressure_label"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_wind_label"
                    tools:text="765 мм рт. ст." />

                <TextView
                    android:id="@+id/current_weather_humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/humidity_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_pressure_label"
                    tools:text="@string/humidity_label" />

                <TextView
                    android:id="@+id/current_weather_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{@string/percentage_mask(viewModel.weatherLiveData.main.humidity)}"
                    app:layout_constraintStart_toEndOf="@id/current_weather_humidity_label"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_pressure_label"
                    tools:text="73 %" />

                <TextView
                    android:id="@+id/current_weather_cloudiness_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/cloudiness_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_humidity_label"
                    tools:text="@string/cloudiness_label" />

                <TextView
                    android:id="@+id/current_weather_cloudiness_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{@string/percentage_mask(viewModel.weatherLiveData.clouds.all)}"
                    app:layout_constraintStart_toEndOf="@id/current_weather_cloudiness_label"
                    app:layout_constraintTop_toBottomOf="@id/current_weather_humidity_label"
                    tools:text="60 %" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>